--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,21 +8,51 @@
     android:background="@color/black"
     tools:context=".activitys.profile.ProfileActivity">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bttomNavProfile"
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/BottomNavProfile"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
         android:background="@color/colorBlue"
-        app:elevation="0dp"
-        app:itemIconSize="30dp"
-        app:itemIconTint="@color/black"
-        app:itemPaddingBottom="0dp"
-        app:itemPaddingTop="0dp"
-        app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageView
+            android:id="@+id/btmProfileUser"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/imageDescription"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btmProfileDictionary"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/userimage"
+            app:tint="@color/white" />
+
+        <ImageView
+            android:id="@+id/btmProfileDictionary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/imageDescription"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/dictionary" />
+
+        <ImageView
+            android:id="@+id/btmProfileLearn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/imageDescription"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btmProfileDictionary"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/learnimage"
+            tools:ignore="ImageContrastCheck" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
         android:id="@+id/imageView14"
@@ -113,7 +143,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="28dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/bttomNavProfile"
+        app:layout_constraintBottom_toTopOf="@+id/BottomNavProfile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtEmailProfile">
