--- a/app/src/main/res/layout/activity_personal_details.xml
+++ b/app/src/main/res/layout/activity_personal_details.xml
@@ -172,7 +172,6 @@
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView31"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toEndOf="@+id/imageView31"
         app:layout_constraintTop_toTopOf="@+id/imageView31"
         tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
@@ -307,6 +306,7 @@
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="@string/personalDetailsImageDescription"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -321,10 +321,12 @@
         android:layout_marginEnd="32dp"
         android:autofillHints="@string/birthDateSuggestion"
         android:background="@null"
+        android:clickable="true"
+        android:cursorVisible="false"
         android:ems="10"
         android:gravity="bottom"
         android:hint="@string/birthDateSuggestion"
-        android:inputType="date"
+        android:inputType="datetime"
         android:textColor="@color/suggestionColor"
         android:textColorHint="@color/suggestionColor"
         android:textSize="14sp"
