--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="colorBlue">#4D8EB2</color>
     <color name="placehoalderColor">#99FFFFFF</color>
     <color name="colorTransparent">#00000000</color>
+    <color name="rankingColor">#D9D9D9</color>
 </resources>
