--- a/app/src/main/res/layout/ranking_item.xml
+++ b/app/src/main/res/layout/ranking_item.xml
@@ -7,21 +7,21 @@
     android:background="@drawable/ranking_background">
 
     <ImageView
-        android:id="@+id/imageView16"
+        android:id="@+id/imgUserRanking"
         android:layout_width="43dp"
         android:layout_height="43dp"
         android:layout_marginStart="13dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:contentDescription="@string/imageDescription"
-        android:scaleType="fitCenter"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView11"
+        app:layout_constraintStart_toEndOf="@+id/txtRankingPosition"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/userimage" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/txtRankingPosition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -38,14 +38,15 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:contentDescription="@string/imageDescription"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
-        app:layout_constraintEnd_toEndOf="@+id/imageView16"
-        app:layout_constraintStart_toStartOf="@+id/imageView16"
-        app:layout_constraintTop_toTopOf="@+id/imageView16"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="@+id/imgUserRanking"
+        app:layout_constraintEnd_toEndOf="@+id/imgUserRanking"
+        app:layout_constraintStart_toStartOf="@+id/imgUserRanking"
+        app:layout_constraintTop_toTopOf="@+id/imgUserRanking"
         app:srcCompat="@drawable/elipseresto" />
 
     <TextView
-        android:id="@+id/textView20"
+        android:id="@+id/txtNameRanking"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="13dp"
@@ -53,12 +54,12 @@
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
-        app:layout_constraintStart_toEndOf="@+id/imageView16"
-        app:layout_constraintTop_toTopOf="@+id/imageView16" />
+        app:layout_constraintBottom_toBottomOf="@+id/imgUserRanking"
+        app:layout_constraintStart_toEndOf="@+id/imgUserRanking"
+        app:layout_constraintTop_toTopOf="@+id/imgUserRanking" />
 
     <TextView
-        android:id="@+id/textView21"
+        android:id="@+id/txtPointsRanking"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
@@ -77,7 +78,7 @@
         android:layout_marginEnd="9dp"
         android:contentDescription="@string/imageDescription"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView21"
+        app:layout_constraintEnd_toStartOf="@+id/txtPointsRanking"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/puntos"
         tools:ignore="ImageContrastCheck" />
